--- a/SslCertHub/SslCertHub.csproj
+++ b/SslCertHub/SslCertHub.csproj
@@ -14,4 +14,10 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AlibabaCloud.SDK.Alidns20150109" Version="3.5.0" />
+      <PackageReference Include="AlibabaCloud.SDK.Cas20200407" Version="1.2.1" />
+      <PackageReference Include="Certes" Version="3.0.4" />
+    </ItemGroup>
+
 </Project>
