--- a/SslCertHub/SslCertHub.csproj
+++ b/SslCertHub/SslCertHub.csproj
@@ -9,15 +9,33 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Content Include="..\.dockerignore">
-        <Link>.dockerignore</Link>
-      </Content>
+        <Content Include="..\.dockerignore">
+            <Link>.dockerignore</Link>
+        </Content>
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="AlibabaCloud.SDK.Alidns20150109" Version="3.5.0" />
-      <PackageReference Include="AlibabaCloud.SDK.Cas20200407" Version="1.2.1" />
-      <PackageReference Include="Certes" Version="3.0.4" />
+        <PackageReference Include="AlibabaCloud.SDK.Alidns20150109" Version="3.5.0"/>
+        <PackageReference Include="AlibabaCloud.SDK.Cas20200407" Version="1.2.1"/>
+        <PackageReference Include="Certes" Version="3.0.4"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
+        <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0"/>
+        <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0"/>
+        <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0"/>
+        <PackageReference Include="Serilog.Sinks.Console" Version="5.0.0"/>
+        <PackageReference Include="Serilog.Sinks.File" Version="5.0.0"/>
+        <PackageReference Include="Volo.Abp.Autofac" Version="8.1.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Content Include="appsettings.json">
+            <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+        <Content Include="appsettings.secrets.json" Condition="Exists('appsettings.secrets.json')">
+            <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
