--- a/SslCertHub/SslCertHub.csproj
+++ b/SslCertHub/SslCertHub.csproj
@@ -17,6 +17,8 @@
     <ItemGroup>
         <PackageReference Include="AlibabaCloud.SDK.Alidns20150109" Version="3.5.0"/>
         <PackageReference Include="AlibabaCloud.SDK.Cas20200407" Version="1.2.1"/>
+        <PackageReference Include="AlibabaCloud.SDK.Cdn20180510" Version="2.4.1" />
+        <PackageReference Include="AlibabaCloud.SDK.Oss20190517" Version="1.0.7" />
         <PackageReference Include="Certes" Version="3.0.4"/>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
         <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0"/>
